--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ on:
       - develop
 
 jobs:
-  test_build_check:
+  tests:
     runs-on: ubuntu-latest
 
     services:
@@ -52,6 +52,14 @@ jobs:
         run: |
           export PYTHONPATH="$(pwd)"
           python -m pytest -q
+
+  docker-build:
+    runs-on: ubuntu-latest
+    needs: tests
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Build Docker image
         run: docker build -t cicd-registration:${{ github.sha }} .
